# ACREDIA-STELLAR

./: CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml
.github/workflows/: ci.yml  secret-scan.yml
contracts/: .env.example  Cargo.toml  README.md
contracts/src/: lib.rs
frontend/: .env.local.example  package-lock.json  package.json
frontend/sql/: database_schema.sql
frontend/src/app/: page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/api/verify/[token]/: route.ts
frontend/src/app/auth/admin-setup/: page.tsx
frontend/src/app/verify/: page.tsx
frontend/src/components/institution/: CredentialUploadForm.tsx
frontend/src/components/marketing/: SiteNav.tsx
frontend/src/components/verification/: VerificationStatusCard.tsx
frontend/src/hooks/: useCredentialVerification.ts
frontend/src/lib/: contracts.ts  credentialService.ts  credentialValidation.ts  serverAuth.ts  supabase.ts
frontend/tests/: credentialValidation.test.ts  verificationComponents.test.tsx
